2001-05-29  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* include/cppunit/extensions/HelperMacros.h: Rework documentation.
	(CU_TEST_SUITE): Move definition of member function suite() ...
	(CU_TEST_SUITE_END): ... to here.
	(CU_TEST): Use '&' to take address of member function
	"testMethod".

	* include/cppunit/extensions/AutoRegisterSuite.h: Declare "factory"
	as a TestFactory*.

2001-05-28  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* doc/other_documentation.dox: Don't include "CppUnit" in
	anchor text, since Doxygen puts its own anchor around it.

	* doc/Makefile.am (html/index.html): Depend on
	other_documentation.dox.

	* doc/Doxyfile.in (EXCLUDE): Move config.h and estring.h to
	EXCLUDE_PATTERNS; they were not being excluded.

	* ChangeLog: Reformat all entries to start with <TAB>.  See
	<http://www.red-bean.com/cvs2cl/changelogs.html> for change log
	format.

	* doc/cookbook.html: Update all code examples, except for TestRunner
	section.

2001-05-23 Baptiste Lepilleur <gaiacrtn@free.fr>

	* Updated CU_TEST_SUITE macro documentation. It is now stated
	explicitly that you do not need to specify template parameter as
	macro argument.  The documentation example has been updated to
	reflect that.

2001-05-23 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>

	* autogen.sh: added '--add-missing' option to automake.
	* autogen.sh: added '--force' option to libtoolize and removed 
	  '--copy'.
	* config: removed generated files from CVS.

2001-05-20 Baptiste Lepilleur <gaiacrtn@free.fr>

	* Fixed bug #424320 (VC++ TestRunner): access violation caused by
	NULL pointer in history list. NULL pointer are not added to the
	history anymore.

2001-05-19 Baptiste Lepilleur <gaiacrtn@free.fr>

	* Added some items to the TODO list for VC++ TestRunner.
  
	* "Debug" configuration is now the default configuration in VC++
	project.
  
	* Modified sort order in the test browser of VC++ TestRunner so
	that tests are in the same order as in the suite. Suites are still